--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #a3e6f1;
     background-color: #ffffff;
   }
   a:hover {
