--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+
 * {
   margin: 0%;
   padding: 0%;
@@ -11,8 +13,18 @@ body,
   width: 100%;
 }
 
+.header {
+  background-color: #43297f;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  font-size: 1rem;
+  font-family: 'Dancing Script', cursive;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 main {
-  height: 100%;
+  height: 85%;
   width: 100%;
   padding: 1.5rem;
   display: flex;
