--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -23,8 +23,20 @@ body,
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.footer {
+  background-color: #d5aad3;  
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 1rem;
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+}
+
 main {
-  height: 85%;
+  height: 80%;
   width: 100%;
   padding: 1.5rem;
   display: flex;
