--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -29,14 +29,14 @@ body,
   text-align: center;
   padding: 1rem;
   font-size: 1rem;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 main {
-  height: 80%;
+  height: 85%;
   width: 100%;
   padding: 1.5rem;
   display: flex;
